# Agentic-Research-Analyst-by-Ollama

./: .gitignore  README.md  app.py  main.py  memory.py  pyproject.toml  research_report.txt  workflow.py
agents/: clarification_agent.py  critic.py  extractor.py  planner.py  report_generator.py  search_agent.py
crew/: agents.py  research_crew.py  research_report (2).txt  tasks.py  tools.py
rag/: vector_store.py
utils/: drive_saver.py  json_parser.py  ollama_client.py  web_scraper.py
