[project]
name = "agentic-research-analyst"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "ddgs>=0.1.0",
    "langchain>=1.3.0",
    "langgraph>=1.2.0",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "requests>=2.34.1",
    "sentence-transformers>=5.5.0",
    "streamlit>=1.57.0",
]
